# cognitive-engine

./: .gitignore  README.md  main.py  pyproject.toml
docs/: ARCHITECTURE.md  WHISPER_SETUP.md  WORKFLOW_GUIDE.md
scripts/: generate_context.py
src/core/: context.py  engine.py  interfaces.py  llm.py  registry.py
src/tasks/: aggregators.py  audio.py  loaders.py  splitters.py  transformers.py  writers.py
